tests/rosetta/out/Swift/100-doors.error
run error: exit status 1
/tmp/TestMochiToSwift100-doors2097640883/001/main.swift:3:5: warning: immutable value 'i' was never used; consider replacing with '_' or removing it
 1 | // Generated by Mochi compiler v0.10.26 on 2025-07-16T11:43:55Z
 2 | var doors: [Any] = []
 3 | for i in 0..<100 {
   |     `- warning: immutable value 'i' was never used; consider replacing with '_' or removing it
 4 |     doors = doors + [false]
 5 | }

/tmp/TestMochiToSwift100-doors2097640883/001/main.swift:9:28: error: cannot convert value of type 'Any' to expected argument type 'Bool'
 7 |     var idx = pass - 1
 8 |     while idx < 100 {
 9 |         doors[idx] = !doors[idx]
   |                            `- error: cannot convert value of type 'Any' to expected argument type 'Bool'
10 |         idx = idx + pass
11 |     }

/tmp/TestMochiToSwift100-doors2097640883/001/main.swift:17:17: error: cannot convert value of type 'Any' to expected condition type 'Bool'
15 |     for col in 0..<10 {
16 |         let idx = row * 10 + col
17 |         if doors[idx] {
   |                 `- error: cannot convert value of type 'Any' to expected condition type 'Bool'
18 |             line = line + "1"
19 |         }
