tests/rosetta/out/Swift/100-doors.swift
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:29:54Z
var doors: [Bool] = []
for i in 0..<100 {
    doors = doors + [false]
}
for pass in 1..<101 {
    var idx = pass - 1
    while idx < 100 {
        doors[idx] = !doors[idx]
        idx = idx + pass
    }
}
for row in 0..<10 {
    var line = ""
    for col in 0..<10 {
        let idx = row * 10 + col
        if doors[idx] {
            line = line + "1"
        }
        else {
            line = line + "0"
        }
        if col < 9 {
            line = line + " "
        }
    }
    print(line)
}
